Fixed card overflow

--- a/apps/webclient/src/app/projects/pages/main/main.component.scss
+++ b/apps/webclient/src/app/projects/pages/main/main.component.scss
@@ -1,5 +1,5 @@
 .content {
-  padding: 16px;
+  padding-left: 16px;
 }
 
 .content > * {
